; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdac_sysfs.c_gpio_caps_show.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdac_sysfs.c_gpio_caps_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_device = type { i32 }
%struct.widget_attribute = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"0x%08x\0A\00", align 1
@AC_PAR_GPIO_CAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdac_device*, i32, %struct.widget_attribute*, i8*)* @gpio_caps_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpio_caps_show(%struct.hdac_device* %0, i32 %1, %struct.widget_attribute* %2, i8* %3) #0 {
  %5 = alloca %struct.hdac_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.widget_attribute*, align 8
  %8 = alloca i8*, align 8
  store %struct.hdac_device* %0, %struct.hdac_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.widget_attribute* %2, %struct.widget_attribute** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = load %struct.hdac_device*, %struct.hdac_device** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @AC_PAR_GPIO_CAP, align 4
  %13 = call i32 @snd_hdac_read_parm(%struct.hdac_device* %10, i32 %11, i32 %12)
  %14 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %13)
  ret i32 %14
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @snd_hdac_read_parm(%struct.hdac_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
